--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="screen">
         <input id="display" readonly placeholder="Generate your password">
-        <button class="copy-button"><img class="copy-img" src="asset/copy-svgrepo-com.svg" alt="copy-button" width="20px" ><span data-copy-mssg class="copy-mssg"></span></button>
+        <button class="copy-button"><img class="copy-img" src="copy-svgrepo-com.svg" alt="copy-button" width="20px" ><span data-copy-mssg class="copy-mssg"></span></button>
       </div>
 
       <div class="input-container">
